--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -149,7 +149,7 @@ figure {
         margin-right: 1px;
       }
       figcaption {
-        clear: left;
+        clear: right;
       }
     }
   }
