--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: 0;
 	z-index: 1000;
 	-webkit-perspective: 1000px;
 	-moz-perspective: 1000px;
@@ -14,11 +14,11 @@
 		position: fixed;
 		max-width: 175px;
 		top: 25px;
-		left: 25px;
+		right: 25px;
 	}
 	button {
 		top: 0;
-		left: 0;
+		right: 0;
 		background: $comp-color;
 		border: none;
 		width: 48px;
@@ -46,7 +46,7 @@
 		height: 5px;
 		background: $white;
 		top: 10px;
-		left: 16%;
+		right: 16%;
 		box-shadow: 
 			0 10px 0 $white, 
 			0 20px 0 $white;
@@ -95,7 +95,7 @@
 			text-decoration: none;
 		}
 		&.dl-back > a {
-			padding-left: 30px;
+			padding-right: 30px;
 			background: rgba(0,0,0,0.2);
 		}
 		&.dl-back:after,
@@ -110,14 +110,14 @@
 			content: "\f105";
 		}
 		&.dl-back:after {
-			left: 10px;
+			right: 10px;
 			color: rgba(212,204,198,0.5);
 			-webkit-transform: rotate(180deg);
 			-moz-transform: rotate(180deg);
 			transform: rotate(180deg);
 		}
 		> a:after {
-			right: 10px;
+			left: 10px;
 			color: rgba(0,0,0,0.15);
 		}
 	}
