--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -39,10 +39,10 @@ h3.title a {
 
 // post list
 .post-list {
-    text-align: left;
+    text-align: right;
 	ul {
 		list-style: none;
-		padding-left: 0;
+		padding-right: 0;
 	}
 	li {
 		padding: 10px 18px;
@@ -70,13 +70,13 @@ h3.title a {
 blockquote {
 	font-family:$alt-font;
 	font-style:italic;
-	border-left:8px solid $color_tundora;
-	padding-left:20px;
+	border-right:8px solid $color_tundora;
+	padding-right:20px;
 	margin: 0;
 }
 @media only screen and (min-width: 48em) {
 	blockquote {
-		margin-left:-28px
+		margin-right:-28px
 	}
 }
 
